# mantis

./: .env.example  .gitignore  .honeybadger_state  CHANGELOG.md  CONFIG.md  CONFIGURATION.md  Cargo.toml  LICENSE  README.md  RESTRUCTURING.md  honeybadger.md  mainnet_config.example.json
.github/workflows/: ci.yml
docs/: CONFIG.md  DEX_SUPPORT.md  LOGGING.md  SUPERVISOR_SYSTEM.md  TESTNET_SETUP.md  TESTNET_TRADING.md  architecture.md
scripts/: diagnose_db.rs
src/: README.md  config.rs  error.rs  errors.rs  lib.rs  main.rs
src/actors/: database.rs  execution.rs  market.rs  mod.rs  risk.rs  strategy.rs  supervisor.rs
src/api/: adapters.rs  mod.rs
src/api/dex/: dexscreener.rs  raydium.rs
src/api/market/: binance.rs  coincap.rs  coingecko.rs  mod.rs  providers.rs
src/api/news/: mod.rs
src/api/wallet/: mod.rs
src/application/src/: app.rs  constants.rs  errors.rs  events.rs  mod.rs
src/application/src/actors/: mod.rs
src/application/src/actors/ai_advisor/: mod.rs
src/application/src/actors/database/: events.rs  mod.rs  queuing.rs
src/cli/commands/: config.rs  dex.rs  maintenance.rs  market.rs  mod.rs  trading.rs  wallet.rs
src/cli/commands/trading/: args.rs  bot_control.rs  history.rs  mod.rs  positions.rs  status.rs
src/cli/display/: dex.rs  market.rs  mod.rs  wallet.rs
src/commands/: config.rs  dex.rs  market.rs  mod.rs  trading.rs  wallet.rs
src/core/: constants.rs  errors.rs  mod.rs
src/core/calculations/: financial.rs  mod.rs  uniswap_v3.rs
src/core/config/: mod.rs
src/core/domain/: dex.rs  market.rs  mod.rs  strategy_params.rs  token.rs  trading.rs
src/core/error/: mod.rs
src/core/indicators/: mod.rs
src/core/models/: dex.rs  market.rs  mod.rs  news.rs  token.rs  wallet.rs
src/core/risk/: assessment.rs  limits.rs  metrics.rs  mod.rs
src/core/strategies/: exit_conditions.rs  factory.rs  mod.rs  traits.rs
src/core/strategies/custom/: mod.rs  momentum.rs  rsi.rs
src/core/utils/: conversion.rs  display.rs  mod.rs
src/core/utils/formatting/: mod.rs
src/core/utils/normalization/: mod.rs  token.rs
src/core/utils/validation/: mod.rs  orders.rs  price.rs
src/data/: collector.rs  mod.rs
src/db/: mod.rs  transaction.rs
src/dex/: mod.rs
src/display/: dex.rs  market.rs  wallet.rs
src/domain/: mod.rs
src/domain/dex/: mod.rs  testnet.rs
src/domain/dex/ethereum/: client.rs  mod.rs  network.rs  price.rs  transaction.rs
src/domain/market/: mod.rs
src/domain/trading/: mod.rs
src/domain/trading/analysis/: mod.rs
src/domain/trading/execution/: bot.rs  mod.rs
src/domain/trading/indicators/: mod.rs
src/domain/trading/risk/: mod.rs
src/domain/trading/strategy/: base.rs  core.rs  factory.rs  mock.rs  mod.rs  momentum.rs  rsi.rs
src/domain/wallet/: mod.rs
src/infra/: mod.rs
src/infra/actors/: bus.rs  database.rs  execution.rs  market.rs  mod.rs  risk.rs  strategy.rs  supervisor.rs
src/infra/actors/execution/: client.rs  events.rs  mod.rs  orders.rs  positions.rs  tasks.rs  types.rs
src/infra/actors/risk/: assessment.rs  events.rs  limits.rs  metrics.rs  mod.rs  types.rs
src/infra/api/: adapters.rs  mod.rs
src/infra/api/dex/: dexscreener.rs  mod.rs  raydium.rs
src/infra/api/market/: binance.rs  coincap.rs  coingecko.rs  mod.rs  providers.rs
src/infra/api/news/: mod.rs
src/infra/api/wallet/: mod.rs
src/infra/cache/: mod.rs
src/infra/collector/: collector.rs  mod.rs
src/infra/db/: connection_monitor.rs  database.rs  init.rs  mod.rs  queue.rs  task_handler.rs
src/infra/db/queries/: mod.rs  position.rs  price.rs  token.rs  trade.rs  verify.rs
src/infra/db/repositories/: dex_transaction_log.rs  mod.rs  position.rs  token.rs  trade.rs
src/infra/db/schema/: mod.rs  tables.rs  version.rs
src/infrastructure/: constants.rs  errors.rs  mod.rs
src/infrastructure/ai/: claude.rs  mod.rs
src/infrastructure/cache/: batch.rs  config.rs  connection.rs  flush.rs  mod.rs  operations.rs  token_cache.rs  traits.rs  types.rs
src/infrastructure/database/: mod.rs  models.rs  pool.rs  queue.rs  task_handler.rs
src/infrastructure/database/queries/: mod.rs  position.rs  price.rs  token.rs  trade.rs  transaction.rs
src/infrastructure/database/repositories/: mod.rs  position.rs  token.rs  trade.rs  transactions.rs
src/infrastructure/database/schema/: mod.rs  tables.rs
src/infrastructure/dex/: client.rs  mod.rs
src/infrastructure/dex/ethereum/: eth_client.rs  mod.rs  pool_pricing.rs  rpc.rs
src/infrastructure/logging/: mod.rs
src/infrastructure/market/providers/: mod.rs  queries.rs  traits.rs
src/infrastructure/network/: mod.rs
src/infrastructure/retry/: mod.rs
src/repositories/: mod.rs  position.rs  price.rs  token.rs  trade.rs
src/trading/: analysis.rs  bot.rs  execution.rs  indicators.rs  mod.rs  risk.rs  strategy.rs
src/types/: market.rs  news.rs  token.rs
src/utils/: mod.rs  retry.rs
src/utils/logging/: mod.rs
tests/common/: mod.rs
(+48 files in other folders)
