[package]
name = "honeybadger"
version = "0.1.0"
edition = "2021"
default-run = "honeybadger" 

[lib]
name = "honeybadger"
path = "src/lib.rs"

[[bin]]
name = "honeybadger"
path = "src/bin/honeybadger.rs"


[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
plotters = "0.3"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
http = "0.2"
notify = "6.1"
notify-rust = "4.9"
tokio-stream = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
futures = "0.3.30"
indicatif = "0.17"
unicode-truncate = "0.2"
once_cell = "1.18"
directories = "5.0"
tabled = "0.18"
dirs = "5.0.1"
thiserror = "1.0"
async-trait = "0.1.77"
lazy_static = "1.4.0"
rand = "0.8.5"
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
hex = "0.4.3"
anyhow = "1.0"
redis = { version = "0.25", features = ["tokio-comp"] }
prettytable-rs = "0.10.0"
libc = "0.2"
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
dashmap = "5.5"
# Added PostgreSQL dependencies
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }

ethers = { version = "2.0", features = ["ws", "rustls", "legacy", "abigen"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
# ... existing build dependencies ...

[dev-dependencies]
# ... existing dev dependencies ...

