[package]
name = "mantis"
version = "0.1.0"
edition = "2021"
default-run = "mantis"

[lib]
name = "mantis"
path = "src/lib.rs"

[[bin]]
name = "mantis"
path = "src/bin/cli/src/honeybadger.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "gzip", "deflate"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
tokio-stream = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
futures = "0.3.30"
unicode-truncate = "0.2"
once_cell = "1.18"
directories = "5.0"
tabled = "0.18"
dirs = "5.0.1"
thiserror = "1.0"
async-trait = "0.1.77"
rand = "0.8.5"
hex = "0.4.3"
redis = { version = "0.25", features = ["tokio-comp"] }
deadpool-redis = { version = "0.15", features = ["rt_tokio_1"] }
dashmap = "5.5"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"] }
deadpool-postgres = { version = "0.12", features = ["rt_tokio_1"] }
ethers = { version = "2.0", features = ["ws", "rustls", "legacy", "abigen"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rust_decimal = { version = "1.37.2", features = ["macros"] }
bs58 = "0.5"
